--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Order summary card</title>
-
   <link rel="stylesheet" href="style.css">
-
 </head>
+
 <body>
-  
   <div class="background">
     <svg xmlns="http://www.w3.org/2000/svg" width="1440" height="437">
       <path fill="#D6E1FF" fill-rule="evenodd"
